[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Name of the top-level import package (directory)
# The name must match the name of the top-level import package
# see Makefile variable PACKAGE.
# Naming the project as the top-level import package is also consistent with
# conventions.
name = "sampleproject"
authors = [{ name = "UNKNOWN" }]
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = ["numpy"]

# Fields that will be loaded dynamically from files or code
dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pylint>=2.6.0",
    "ruff",
]

[project.scripts]
sampleproject = "sampleproject.main:main"

[project.urls]
Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/spam.git"
#"Bug Tracker" = "https://github.com/me/spam/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
# package names should match these glob patterns (["*"] by default)
include = ["sampleproject*"]

[tool.setuptools.dynamic]
# The version string will be included in your Python package
version = { attr = "sampleproject.__version__" }
# Long description of the package
readme = { file = "README.md", content-type = "text/markdown" }

[tool.pylint.format]
# Configure pylint to be compliant with black
max-line-length = "88"
